docs/NewStructure_admin/2. Установка и сопровождение/8. Безопасность платформы/015-admission-policy-engine/charts/constraint-templates/tests/allowed-proc-mount/constraint_security_policy.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8AllowedProcMount
metadata:
  name: test
spec:
  enforcementAction: "deny"
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: security.deckhouse.io/pod-policy
          operator: In
          values: 
          - baseline
          - restricted
  parameters:
    allowedProcMount: Unmasked
