docs/NewStructure_admin/2. Установка и сопровождение/8. Безопасность платформы/015-admission-policy-engine/charts/constraint-templates/tests/allowed-proc-mount/test_samples/pss_baseline/allowed_undefined.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-proc-mount-allowed
  namespace: testns
  labels:
    app: nginx-proc-mount
spec:
  containers:
    - name: nginx
      image: nginx
