docs/NewStructure_admin/2. Установка и сопровождение/8. Безопасность платформы/015-admission-policy-engine/charts/constraint-templates/tests/allowed-proc-mount/test_samples/security_policy/allowed_default_with_unmasked.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-proc-mount-disallowed
  namespace: testns
  labels:
    app: nginx-proc-mount
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        procMount: default
