docs/NewStructure_admin/2. Установка и сопровождение/8. Безопасность платформы/015-admission-policy-engine/charts/constraint-templates/tests/allowed-proc-mount/test_suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-allowed-proc-mount
tests:
  - name: pod-security-standards-baseline
    template: ../../templates/security/allowed-proc-mount.yaml
    constraint: constraint_pss_baseline.yaml
    cases:
      - name: example-allowed
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/pss_baseline/allowed.yaml
        assertions:
          - violations: no
      - name: example-allowed-empty
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/pss_baseline/allowed_empty.yaml
        assertions:
          - violations: no
      - name: example-allowed-undefined
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/pss_baseline/allowed_undefined.yaml
        assertions:
          - violations: no
      - name: example-disallowed
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/pss_baseline/disallowed.yaml
        assertions:
          - violations: yes
      - name: example-disallowed-ephemeral
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/pss_baseline/disallowed_ephemeral.yaml
        assertions:
          - violations: yes

  - name: security-policy
    template: ../../templates/security/allowed-proc-mount.yaml
    constraint: constraint_security_policy.yaml
    cases:
      - name: example-allowed
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/security_policy/allowed.yaml
        assertions:
          - violations: no
      - name: example-disallowed
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/security_policy/allowed_default_with_unmasked.yaml
        assertions:
          - violations: no
